--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -10,30 +10,32 @@ resources:
 
 variables:
   # Container registry service connection established during pipeline creation
-  dockerRegistryServiceConnection: '9ae19595-312c-46d6-ae08-bcb195cad64c'
-  imageRepository: 'horondi_client_back'
-  containerRegistry: 'horondi.azurecr.io'
-  dockerfilePath: '**/Dockerfile'
-  tag: '$(Build.BuildId)'
+  subscription: 'Visual Studio Enterprise – MPN (734fc759-c3a2-4e22-a478-301dc5b10496)'
+  containerRegistry: '{"loginServer":"horondistaging.azurecr.io", "id" : "/subscriptions/734fc759-c3a2-4e22-a478-301dc5b10496/resourceGroups/Horondi/providers/Microsoft.ContainerRegistry/registries/HorondiStaging"}'
+  
 
   # Agent VM image name
-  vmImageName: 'ubuntu-latest'
+  vmImageName: 'ubuntu-16.04'
 
 stages:
 - stage: Build
   displayName: Build and push stage
   jobs:
-  - job: Build
-    displayName: Build
-    pool:
-      vmImage: $(vmImageName)
+  - job: Build    
     steps:
-    - task: Docker@2
-      displayName: Build and push an image to container registry
-      inputs:
-        command: buildAndPush
-        repository: $(imageRepository)
-        dockerfile: $(dockerfilePath)
-        containerRegistry: $(dockerRegistryServiceConnection)
-        tags: |
-          $(tag)
+     - task: DownloadSecureFile@1
+       inputs:
+        secureFile: '.env'
+
+     - task: Docker@0
+       displayName: 'Build an image'
+       inputs:
+          azureSubscription: $(subscription)
+          azureContainerRegistry: $(containerRegistry)
+          action: 'Build an image'
+     - task: Docker@0
+       displayName: 'Push an image'
+       inputs:
+         azureSubscription: $(subscription)
+         azureContainerRegistry: $(containerRegistry)
+         action: 'Push an image'
