--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -26,6 +26,10 @@ stages:
      - task: DownloadSecureFile@1
        inputs:
         secureFile: '.env'
+     - task: Bash@3
+       inputs:
+        targetType: 'inline'
+        script: 'ls'
 
      - task: Docker@0
        displayName: 'Build an image'
