--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -29,7 +29,7 @@ stages:
      - task: Bash@3
        inputs:
         targetType: 'inline'
-        script: 'ls'
+        script: 'ls -a'
 
      - task: Docker@0
        displayName: 'Build an image'
