--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -29,6 +29,10 @@ stages:
      - task: Bash@3
        inputs:
         targetType: 'inline'
+        script: 'mv $(mySecureFile.secureFilePath) . '
+     - task: Bash@3
+       inputs:
+        targetType: 'inline'
         script: 'ls -a'
 
      - task: Docker@0
