--- a/azure-pipelines-testing.yml
+++ b/azure-pipelines-testing.yml
@@ -17,7 +17,7 @@ steps:
   - task: Bash@3
     inputs:
       targetType: 'inline'
-      script: 'mv $(env.secureFilePath) .env '
+      script: 'mv $(env.secureFilePath) .env.test '
   - task: Bash@3
     inputs:
       targetType: 'inline'
